@@ -1237,9 +1237,15 @@ to be used easily on the kernel command line as well.
 </para>
 
 <informalexample role="example"><screen>
-tasksel tasksel/first multiselect standard, desktop
 #tasksel tasksel/first multiselect standard, web-server
+<phrase condition="lenny">
+# If the desktop task is selected, install the kde and xfce desktops
+# instead of the default gnome desktop.
+#tasksel tasksel/desktop multiselect kde-desktop, xfce-desktop
+</phrase>
+<phrase condition="etch">
 #tasksel tasksel/first multiselect standard, kde-desktop
+</phrase>
 
 # Individual additional packages to install
 #d-i pkgsel/include string openssh-server build-essential
