@@ -4,7 +4,10 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
   * Remove all information about RiscPC because these machines are
     no longer supported.
 
- -- Frans Pop <fjp@debian.org>  Mon, 19 Mar 2007 20:38:37 +0100
+  [ Joey Hess ]
+  * Document the new tasksel/desktop preseed for lenny.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 17 Apr 2007 21:53:35 -0400
 
 installation-guide (20070319) unstable; urgency=low
 
